# NEONengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
assets/: NEONengine.adf  gutter.neon  mpg.act
assets/core/: base.act  pointers.act
assets/lang/: en.noir  test.noir
assets/music/: theme.mod
src/: .clang-format  .clang-tidy  build_number.h  main.c  main.cpp  neonengine.cpp  neonengine.h  test.h
src/ace++/: bitmap.h  font.h  log.h
src/core/: game_data.c  game_data.cpp  game_data.h  image_swapper.c  image_swapper.cpp  image_swapper.h  lang.c  lang.cpp  lang.h  layer.c  layer.cpp  layer.h  mouse_pointer.c  mouse_pointer.cpp  mouse_pointer.h  music.c  music.cpp  music.h  nine_patch.c  nine_patch.cpp  nine_patch.h  screen.c  screen.cpp  screen.h  string_table.cpp  string_table.h  text.c  text.h  text_render.c  text_render.cpp  text_render.h  timeline.h  types.h
src/mtl/: array.h  cstdint.h  cxa_atexit.cpp  expected.h  memory.cpp  memory.h  utility.h  vector.h
src/states/: debug_view.c  debug_view.cpp  dialogue_test.c  dialogue_test.cpp  font_test.c  font_test.cpp  lang_selection.c  lang_selection.cpp  lang_test.cpp  splash.c  splash.cpp  splash.h
src/tests/: array_tests.h  bstr_view_tests.h  bstring_tests.h  lang_tests.h  test_macros.h  test_runner.c  test_runner.cpp
src/utils/: array.c  array.cpp  array.h  assert.c  assert.h  bstr.c  bstr.cpp  bstr.h  bstr_view.h  fade.c  fade.cpp  fade.h  music.c  screen.c  screen.h  types.h
